modified:   Campus.html

--- a/Campus.html
+++ b/Campus.html
@@ -16,11 +16,11 @@
     <main>
         <section id="departments">
             <div class="department">
-                <a href="Avvp Block.html">
+                <a href="Avvp block.html">
                     <img src="DAVP.jpg" alt="Department of AVVP">
                 </a>
                 <div>
-                    <a href="Avvp Block.html">
+                    <a href="Avvp block.html">
                         <h3>AVVP Block</h3>
                     </a>
                     <p>Main Block</p>
