new file:   Amrita-main.mp4 	new file:   Badminton.png 	new file:   Basket.png 	new file:   Cricket.png 	new file:   Foot.png 	modified:   Main Page.html 	new file:   Tennis.png 	new file:   Thank.html 	new file:   Volleyball.png 	new file:   about.html 	new file:   admission.html 	new file:   chess.png 	new file:   ground.html 	modified:   index.html 	modified:   main.css 	modified:   p1.css

--- a/Main Page.html
+++ b/Main Page.html
@@ -23,7 +23,7 @@
             <nav class="navbar">
                 <ul>
                     <li><a href="Main Page.html">Home</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="about.html">About</a></li>
                     <li><a href="Club.html">Clubs</a></li>
                     <li><a href="#">Academics</a></li>
                 </ul>
@@ -108,11 +108,11 @@
         <section class="content-section reverse">
             <img src="play2.jpg" alt="Playgrounds" class="image">
             <div class="text-content">
-                <a href="Table.html">
+                <a href="ground.html">
                     <h1>Play Grounds</h1>
+                    <p>Discover the sports facilities and playgrounds...<br>
+                        <b class="under">Click Here to Explore →</b>
                 </a>
-                <p>Discover the sports facilities and playgrounds...<br>
-                    <b class="under">Click Here to Explore →</b>
                 </p>
             </div>
         </section>
