--- a/admission.html
+++ b/admission.html
@@ -306,7 +306,7 @@
             <div>
                 <h2>🎉 Application Submitted!</h2>
                 <p>Thank you for enrolling.<br>We will contact you soon!</p>
-                <a href="thankyou.html"
+                <a href="Thank.html"
                     style="display:inline-block; margin-top:1rem; background:#b10f56; color:white; padding:0.8rem 1.5rem; border-radius:30px; text-decoration:none; font-weight:bold;">Go
                     to Thank You Page</a>
             </div>
