modified:   Avvp block.html 	modified:   Avvp.css 	modified:   Main Page.html 	new file:   Male.png 	new file:   female.png 	modified:   index.html 	modified:   p1.css

--- a/Main Page.html
+++ b/Main Page.html
@@ -89,18 +89,20 @@
 
         <section class="content-section">
             <div class="text-content">
-                <a href="Campus.html">
+                <a href="Faculty.html">
                     <h1>Faculty</h1>
+                    <p>Amrita University boasts a distinguished faculty comprising experienced educators, researchers,
+                        and
+                        industry experts. The faculty members are dedicated to providing high-quality education and
+                        fostering a
+                        nurturing learning environment. They are actively involved in cutting-edge research and
+                        contribute
+                        significantly to their respective fields, ensuring that students receive a well-rounded and
+                        up-to-date
+                        education.<br>
+                        <b class="under">Click Here to Explore →</b>
+                    </p>
                 </a>
-                <p>Amrita University boasts a distinguished faculty comprising experienced educators, researchers, and
-                    industry experts. The faculty members are dedicated to providing high-quality education and
-                    fostering a
-                    nurturing learning environment. They are actively involved in cutting-edge research and contribute
-                    significantly to their respective fields, ensuring that students receive a well-rounded and
-                    up-to-date
-                    education.<br>
-                    <b class="under">Click Here to Explore →</b>
-                </p>
             </div>
             <img src="Admini.jpg" alt="Administration" class="image">
         </section>
@@ -110,10 +112,14 @@
             <div class="text-content">
                 <a href="ground.html">
                     <h1>Play Grounds</h1>
-                    <p>Discover the sports facilities and playgrounds...<br>
+                    <p>Amrita Vishwa Vidyapeetham provides world-class sports facilities and well-maintained playgrounds
+                        to encourage physical fitness and sportsmanship among students. The campus offers a variety of
+                        sports options, including cricket, football, basketball, volleyball, and more. These facilities
+                        are designed to cater to both recreational and competitive sports activities, fostering teamwork
+                        and a healthy lifestyle.<br>
                         <b class="under">Click Here to Explore →</b>
+                    </p>
                 </a>
-                </p>
             </div>
         </section>
 
