--- a/Avvp block.html
+++ b/Avvp block.html
@@ -33,183 +33,190 @@
         <div id="faculty-container" class="faculty-container">
             <!-- Faculty Members -->
             <div class="faculty-details">
-                <img src="sravan-10 (1)_enhanced.jpg" alt="Faculty 1">
+                <img src="Male.png" alt="Faculty 1">
                 <div class="details">
-                    <h3>Dr. Sravan</h3>
-                    <p>Professor of Computer Science</p>
-                    <p>Email: sravan1@example.com</p>
+                    <h3>Dr.S.Anukumar Kathirvel,A.P</h3>
+                    <p>Professor of Mathematics</p>
+                    <p>Email: anukumar@outlook.com</p>
                 </div>
             </div>
 
             <div class="faculty-details">
-                <img src="sravan-10 (1)_enhanced.jpg" alt="Faculty 2">
+                <img src="female.png" alt="Faculty 2">
                 <div class="details">
-                    <h3>Dr. Sravan</h3>
-                    <p>Associate Professor of Mathematics</p>
-                    <p>Email: sravan2@example.com</p>
+                    <h3>Mrs.R.P.Sumithra,A.P</h3>
+                    <p>Professor of UID</p>
+                    <p>Email: sumithra@outlook.com</p>
                 </div>
             </div>
 
             <div class="faculty-details">
-                <img src="sravan-10 (1)_enhanced.jpg" alt="Faculty 3">
+                <img src="Male.png" alt="Faculty 3">
                 <div class="details">
-                    <h3>Dr. Sravan</h3>
-                    <p>Assistant Professor of Physics</p>
-                    <p>Email: sravan3@example.com</p>
+                    <h3>Mr.C.B.Aravind,A.P</h3>
+                    <p>Professor of GoG</p>
+                    <p>Email: Aravind@outlook.com</p>
                 </div>
             </div>
 
             <div class="faculty-details">
-                <img src="sravan-10 (1)_enhanced.jpg" alt="Faculty 4">
+                <img src="female.png" alt="Faculty 4">
                 <div class="details">
-                    <h3>Dr. Sravan</h3>
-                    <p>Professor of Chemistry</p>
-                    <p>Email: sravan4@example.com</p>
+                    <h3>Dr.V.Thanammal Indu,A.P</h3>
+                    <p>Professor of OOPS</p>
+                    <p>Email: Thanammalindu@outlook.com</p>
                 </div>
             </div>
 
             <div class="faculty-details">
-                <img src="sravan-10 (1)_enhanced.jpg" alt="Faculty 5">
+                <img src="Male.png" alt="Faculty 5">
                 <div class="details">
-                    <h3>Dr. Sravan</h3>
-                    <p>Professor of Biology</p>
-                    <p>Email: sravan5@example.com</p>
+                    <h3>Dr.S.Pitchai Murugan,A.P</h3>
+                    <p>Professor of Mathematics</p>
+                    <p>Email: pitchai@outlook.com</p>
                 </div>
             </div>
 
             <div class="faculty-details">
-                <img src="sravan-10 (1)_enhanced.jpg" alt="Faculty 6">
+                <img src="female.png" alt="Faculty 6">
                 <div class="details">
-                    <h3>Dr. Sravan</h3>
-                    <p>Professor of Economics</p>
-                    <p>Email: sravan6@example.com</p>
+                    <h3>Mrs.K.Rejini,A.P</h3>
+                    <p>Professor of OOPS</p>
+                    <p>Email: rejini@outlook.com</p>
                 </div>
             </div>
 
             <div class="faculty-details">
-                <img src="sravan-10 (1)_enhanced.jpg" alt="Faculty 7">
+                <img src="Male.png" alt="Faculty 7">
                 <div class="details">
-                    <h3>Dr. Sravan</h3>
-                    <p>Professor of Statistics</p>
-                    <p>Email: sravan7@example.com</p>
+                    <h3>Dr.M.Kumara Dhas,A.P</h3>
+                    <p>Professor of Physics</p>
+                    <p>Email: Kumara@outlook.com</p>
                 </div>
             </div>
 
             <div class="faculty-details">
-                <img src="sravan-10 (1)_enhanced.jpg" alt="Faculty 8">
+                <img src="female.png" alt="Faculty 8">
                 <div class="details">
-                    <h3>Dr. Sravan</h3>
-                    <p>Professor of English</p>
-                    <p>Email: sravan8@example.com</p>
+                    <h3>Dr.S.Kavitha,A.P</h3>
+                    <p>Professor of Mathematics</p>
+                    <p>Email: Kavitha@outlook.com</p>
                 </div>
             </div>
 
             <div class="faculty-details">
-                <img src="sravan-10 (1)_enhanced.jpg" alt="Faculty 9">
+                <img src="Male.png" alt="Faculty 9">
                 <div class="details">
-                    <h3>Dr. Sravan</h3>
-                    <p>Professor of History</p>
-                    <p>Email: sravan9@example.com</p>
+                    <h3>Dr.R.S.Jayaram,A.P</h3>
+                    <p>Professor of MEEE</p>
+                    <p>Email: Jayaram@outlook.com</p>
                 </div>
             </div>
 
             <div class="faculty-details">
-                <img src="sravan-10 (1)_enhanced.jpg" alt="Faculty 10">
+                <img src="female.png" alt="Faculty 10">
                 <div class="details">
-                    <h3>Dr. Sravan</h3>
-                    <p>Professor of Political Science</p>
-                    <p>Email: sravan10@example.com</p>
+                    <h3>Mrs.T.K.Bino,A.P</h3>
+                    <p>Professor of DSA</p>
+                    <p>Email: bino@outlook.com</p>
+                </div>
+            </div>
+        </div>
+        <div class="faculty-container">
+            <img src="Male.png" alt="Faculty 11">
+            <div class="details">
+                <h3>Dr.Raja sekhar,A.P</h3>
+                <p>Professor of Mathematics</p>
+                <p>Email: rajasekhar@outlook.com</p>
+            </div>
+
+            <div id="program" class="content">
+                <h2>Courses Running in This Block</h2>
+                <ul>
+                    <li>B.Tech in Artificial Intelligence and Data Science</li>
+                    <li>B.Tech in Computer Science and Engineering</li>
+                    <li>B.Tech in Electronics and Communication Engineering</li>
+                </ul>
+            </div>
+        </div>
+
+        <div id="syllabus" class="content">
+            <!-- Course Selection -->
+            <select id="course-select" onchange="loadSemesters()">
+                <option value="">Select a course</option>
+                <option value="aids">Artificial Intelligence and Data Science</option>
+                <option value="cse">Computer Science and Engineering</option>
+                <option value="ece">Electronics and Communication Engineering</option>
+            </select>
+
+            <select id="semester-select" onchange="loadSyllabus()" style="display: none;">
+                <!-- Semesters will be added dynamically -->
+            </select>
+
+            <div id="syllabus-content">
+                <table id="syllabus-table" style="display: none;">
+                    <thead>
+                        <tr>
+                            <th>Course Code</th>
+                            <th>Course Title</th>
+                            <th>L</th>
+                            <th>T</th>
+                            <th>P</th>
+                            <th>Credits</th>
+                            <th>Evaluation Pattern</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <!-- Syllabus rows will be dynamically added here -->
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <div class="seminar-meeting-container">
+            <!-- Seminar Hall Section -->
+            <div id="seminar-hall" class="seminarcontent">
+                <h2>Seminar Hall</h2>
+                <div class="seminar-intro">
+                    <img src="Seminar.jpg" alt="Seminar" class="seminar-img">
+                    <p>Explore our past and upcoming seminars covering cutting-edge topics in AI, Quantum Computing, and
+                        more.
+                    </p>
+                    <a href="Seminar.html" class="explore-btn">Explore More →</a>
+                </div>
+            </div>
+
+            <!-- Faculty Committee Meetings Section -->
+            <div id="committee-meetings" class="facultycontent">
+                <h2>Faculty Committee Meetings</h2>
+                <div class="seminar-intro">
+                    <img src="Seminar1.jpg" alt="Faculty Meeting" class="seminar-img">
+                    <p>Discover past and upcoming faculty committee meetings.</p>
+                    <a href="Faculty.html" class="explore-btn">Explore More →</a>
+                </div>
+            </div>
+
+            <!-- Club Activities Section -->
+            <div id="Club-Activity" class="clubcontent">
+                <h2>Club Activities</h2>
+                <div class="club-intro">
+                    <img src="nature.jpg" alt="Club Activities" class="seminar-img">
+                    <p>Our campus hosts a variety of clubs that cater to diverse interests. From the Robotics Club,
+                        which delves
+                        into the world of automation and AI, to the Literary Club, which fosters a love for literature
+                        and
+                        creative writing, there's something for everyone. Join us to explore your passions and develop
+                        new
+                        skills!</p>
+                    <a href="Club.html" class="explore-btn">Explore More →</a>
                 </div>
             </div>
         </div>
 
-        <div id="program" class="content">
-            <h2>Courses Running in This Block</h2>
-            <ul>
-                <li>B.Tech in Artificial Intelligence and Data Science</li>
-                <li>B.Tech in Computer Science and Engineering</li>
-                <li>B.Tech in Electronics and Communication Engineering</li>
-            </ul>
-        </div>
-    </div>
 
-    <div id="syllabus" class="content">
-        <!-- Course Selection -->
-        <select id="course-select" onchange="loadSemesters()">
-            <option value="">Select a course</option>
-            <option value="aids">Artificial Intelligence and Data Science</option>
-            <option value="cse">Computer Science and Engineering</option>
-            <option value="ece">Electronics and Communication Engineering</option>
-        </select>
-
-        <select id="semester-select" onchange="loadSyllabus()" style="display: none;">
-            <!-- Semesters will be added dynamically -->
-        </select>
-
-        <div id="syllabus-content">
-            <table id="syllabus-table" style="display: none;">
-                <thead>
-                    <tr>
-                        <th>Course Code</th>
-                        <th>Course Title</th>
-                        <th>L</th>
-                        <th>T</th>
-                        <th>P</th>
-                        <th>Credits</th>
-                        <th>Evaluation Pattern</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <!-- Syllabus rows will be dynamically added here -->
-                </tbody>
-            </table>
-        </div>
-    </div>
-
-    <div class="seminar-meeting-container">
-        <!-- Seminar Hall Section -->
-        <div id="seminar-hall" class="seminarcontent">
-            <h2>Seminar Hall</h2>
-            <div class="seminar-intro">
-                <img src="Seminar.jpg" alt="Seminar" class="seminar-img">
-                <p>Explore our past and upcoming seminars covering cutting-edge topics in AI, Quantum Computing, and
-                    more.
-                </p>
-                <a href="Seminar.html" class="explore-btn">Explore More →</a>
-            </div>
-        </div>
-
-        <!-- Faculty Committee Meetings Section -->
-        <div id="committee-meetings" class="facultycontent">
-            <h2>Faculty Committee Meetings</h2>
-            <div class="seminar-intro">
-                <img src="Seminar1.jpg" alt="Faculty Meeting" class="seminar-img">
-                <p>Discover past and upcoming faculty committee meetings.</p>
-                <a href="Faculty.html" class="explore-btn">Explore More →</a>
-            </div>
-        </div>
-
-        <!-- Club Activities Section -->
-        <div id="Club-Activity" class="clubcontent">
-            <h2>Club Activities</h2>
-            <div class="club-intro">
-                <img src="nature.jpg" alt="Club Activities" class="seminar-img">
-                <p>Our campus hosts a variety of clubs that cater to diverse interests. From the Robotics Club,
-                    which delves
-                    into the world of automation and AI, to the Literary Club, which fosters a love for literature
-                    and
-                    creative writing, there's something for everyone. Join us to explore your passions and develop
-                    new
-                    skills!</p>
-                <a href="Club.html" class="explore-btn">Explore More →</a>
-            </div>
-        </div>
-    </div>
-
-
-    <footer>
-        <p>&copy; 2024 Amrita Vishwa Vidyapeetham. All Rights Reserved.</p>
-    </footer>
+        <footer>
+            <p>&copy; 2024 Amrita Vishwa Vidyapeetham. All Rights Reserved.</p>
+        </footer>
     </div>
 
     <script>
