--- a/index.html
+++ b/index.html
@@ -30,14 +30,21 @@
                 Your browser does not support the video tag.
             </video>
             <div class="content">
-                <h1>Amrita Vishwa Vidhyapeetham</h1>
-                <h2>Nagercoil Campus</h2>
-                <a href="Main Page.html"><button>Start Explore →</button></a>
+                <h1>Welcome to Amrita
+                    <span class="left"></span>
+                    <span class="right"></span>
+                </h1>
+                <h2>Nagercoil Campus
+                    <span class="left"></span>
+                    <span class="right"></span>
+                </h2>
             </div>
-            <div>
-                <img src="Amrita.png" alt="description" class="logo" />
-            </div>
+            <a href="Main Page.html"><button>Start Explore →</button></a>
         </div>
+        <div>
+            <img src="Amrita.png" alt="description" class="logo" />
+        </div>
+    </div>
     </div>
 
     <script>
@@ -56,6 +63,30 @@
             };
         });
     </script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            window.onload = function () {
+                var preloader = document.getElementById("preloader");
+                var content = document.getElementById("content");
+
+                if (preloader && content) {
+                    preloader.style.opacity = "0";
+                    setTimeout(function () {
+                        preloader.style.display = "none";
+                        content.style.display = "block";
+
+                        // After full border animation (4 seconds total)
+                        setTimeout(function () {
+                            document.querySelectorAll('.content h1, .content h2').forEach(function (el) {
+                                el.classList.add('animated');
+                            });
+                        }, 4000); // 4 seconds total time (top + bottom + left + right)
+                    }, 500);
+                }
+            };
+        });
+    </script>
+
 </body>
 
 </html>
