--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <div class="container">
             <video autoplay loop muted plays-inline class="background-clip">
-                <source src="Amrita-main.mp4" type="video/mp4">
+                <source src="Main.mp4" type="video/mp4">
                 <track src="subtitles.vtt" kind="subtitles" srclang="en" label="English">
                 <track src="descriptions.vtt" kind="descriptions" srclang="en" label="English Descriptions">
                 Your browser does not support the video tag.
